@@ -1,6 +1,9 @@
 2013-05-02  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
 * DOC/INSTALL: Update NestedVM build manual - it doesn't build with
   --enable-ide.
+* javanvm/atari_javanvm.c: Fix overflow of dsp_buffer - could happen on some
+  systems where JAVANVM_SoundAvailable sometimes returns value larger than
+  2*line_buffer_size.
 
 
 2013-04-28  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
